- update account number

--- a/src/en/payment.ejs
+++ b/src/en/payment.ejs
@@ -73,7 +73,8 @@
                                     src="/assets/img/thanh-toan/hdbank.png" alt="&nbsp;" /></div>
                                   
                                     <div><b>ACCOUNT NAME:</b> CONG TY CO PHAN DAU TU CONG NGHE MINH ANH</div> 
-                                    <div><b>ACCOUNT NUMBER  :</b> 045840070000745 (USD)</div>
+                                    <div><b>ACCOUNT NUMBER  :</b> 045704070024952 (VND)</div>
+                                    <div>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&nbsp;&nbsp;&nbsp;045840070000757 (USD)</div>
                                     <div>HO CHI MINH CITY DEVELOPMENT JOINT STOCK COMMERCIAL BANK - SAIGON BRANCH</div>
                                    
                                     
