--- a/src/thanh-toan.ejs
+++ b/src/thanh-toan.ejs
@@ -74,7 +74,8 @@
                                     src="assets/img/thanh-toan/hdbank.png" alt="&nbsp;" /></div>
                                   
                                     <div><b>TÊN TÀI KHOẢN:</b> CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH</div> 
-                                    <div><b>SỐ TÀI KHOẢN  :</b> 045840070000745 (USD)</div>
+                                    <div><b>SỐ TÀI KHOẢN  :</b> 045704070024952 (VND)</div>
+                                    <div>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&nbsp;&nbsp;045840070000757 (USD)</div>
                                     <div>NGÂN HÀNG TMCP PHÁT TRIỂN TP. HỒ CHÍ MINH - CHI NHÁNH SÀI GÒN</div>
                                     <!-- <div>CHI NHÁNH SÀI GÒN</div> -->
                                     
