--- a/src/bat-dong-san.ejs
+++ b/src/bat-dong-san.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH - DỰ ÁN</title>
+  <title>CÔNG TY CỔ PHẦN ĐẦU TƯ NÔNG NGHIỆP MINH ANH - DỰ ÁN</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <link rel="canonical" href="/bat-dong-san/" />
   <meta property="og:locale" content="vi_VN" />
@@ -47,7 +47,7 @@
                           <h2 class="title_header">THÔNG TIN DỰ ÁN BẤT ĐỘNG SẢN</h2>
                           <div class="br_line"><img src="/assets/img/bds/line.png" alt="icon line"></div>
                           <div class="services_text"><p style="text-align: justify;">Tổng hợp danh sách các dự án bất động sản, dự án căn hộ chung cư giá rẻ, dự án cao cấp mới nhất. Tại đây <span style="color:#ff0000;"><strong>
-                            CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH</strong></span> cung cấp đầy đủ tất cả thông tin về chủ đầu tư dự án, pháp lý, tiến độ xây dựng kèm theo bảng giá bán chi tiết của dự án nhà ở cập nhật mới nhất.</p></div>
+                            CÔNG TY CỔ PHẦN ĐẦU TƯ NÔNG NGHIỆP MINH ANH</strong></span> cung cấp đầy đủ tất cả thông tin về chủ đầu tư dự án, pháp lý, tiến độ xây dựng kèm theo bảng giá bán chi tiết của dự án nhà ở cập nhật mới nhất.</p></div>
                           <div class="row project-layout">
                             <div class="col-md-4 col-sm-6 col-xs-12">
                               <div class="single-property"> <span>Đang triển khai</span>
