--- a/src/bds/minh-anh-park-hill-cu-chi.ejs
+++ b/src/bds/minh-anh-park-hill-cu-chi.ejs
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH</title>
+  <title>CÔNG TY CỔ PHẦN ĐẦU TƯ NÔNG NGHIỆP MINH ANH</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <link rel="canonical" href="/san-pham/" />
   <meta property="og:locale" content="vi_VN" />
   <meta property="og:locale:alternate" content="en_US" />
   <meta property="og:type" content="article" />
-  <meta property="og:title" content="CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH" />
+  <meta property="og:title" content="CÔNG TY CỔ PHẦN ĐẦU TƯ NÔNG NGHIỆP MINH ANH" />
   <meta property="og:url" content="/san-pham/" />
   <meta property="og:site_name" content="Minh Anh Group" />
   <meta name="twitter:card" content="summary_large_image" />
@@ -44,7 +44,7 @@
                     <div class="container_inner clearfix">
                       <div class="title_subtitle_holder" style="padding-top:80px;">
                         <div class="title_subtitle_holder_inner">
-                          <!-- <h1 style="color:#ffffff"><span>CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH</span></h1> -->
+                          <!-- <h1 style="color:#ffffff"><span>CÔNG TY CỔ PHẦN ĐẦU TƯ NÔNG NGHIỆP MINH ANH</span></h1> -->
                           <span class="separator small right"></span>
                         </div>
                       </div>
@@ -58,14 +58,14 @@
                 <div class="project-detail">
                   <div class="grid_section">
                     <div class="section_inner">
-                      <p><strong>Minh Anh Park Hill</strong> của <strong> Công ty Cổ phần Đầu tư Công nghệ Minh Anh</strong> có diện tích khoảng 2,2 ha tọa lạc trên địa phận xã Hòa Phú, Huyện Củ Chi thuộc Thành phố Hồ Chí Minh. Theo quy hoạch, <strong>Minh Anh Park Hill</strong> sẽ là dự án tổ hợp dịch vụ, thương mại, văn hóa và vui chơi giải trí tại khu vực Tây Bắc Sài Gòn.</p>
+                      <p><strong>Minh Anh Park Hill</strong> của <strong> CÔNG TY CỔ PHẦN ĐẦU TƯ NÔNG NGHIỆP MINH ANH</strong> có diện tích khoảng 2,2 ha tọa lạc trên địa phận xã Hòa Phú, Huyện Củ Chi thuộc Thành phố Hồ Chí Minh. Theo quy hoạch, <strong>Minh Anh Park Hill</strong> sẽ là dự án tổ hợp dịch vụ, thương mại, văn hóa và vui chơi giải trí tại khu vực Tây Bắc Sài Gòn.</p>
                       <p style="text-align:center"><img alt="" src="/assets/img/bds/minhanh_cuchi_duan.PNG"></p>
                       <p style="text-align:center"><span style="font-size:12px"><em>Dự án Khu dân cư Minh Anh Park Hill</em></span></p>
                       <h5><span style="color:#0000FF"><strong>I. GIỚI THIỆU&nbsp;DỰ ÁN MINH ANH PARK HILL</strong></span></h5>
                         </br>
                       <p>- Tên dự án:&nbsp;<strong>Minh Anh Park Hill</strong></p>
                       <p>- Vị trí: Tỉnh lộ 8, xã Hòa Phú, Huyện Củ Chi, Thành phố Hồ Chí Minh, Việt Nam</p>
-                      <p>- Chủ đầu tư: <strong>Công ty Cổ phần Đầu tư Công nghệ Minh Anh</strong></p>
+                      <p>- Chủ đầu tư: <strong>CÔNG TY CỔ PHẦN ĐẦU TƯ NÔNG NGHIỆP MINH ANH</strong></p>
                       <p>- Đơn vị tư vấn thiết kế: Công ty TNHH Tư vấn Thiết kế Xây dựng Sài Gòn QTK</p>
                       <p>- Đơn vị phân phối chính: </p>
                       <p>- Tổng diện tích: 2,2 ha</p>
