--- a/src/en/index.ejs
+++ b/src/en/index.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>MINH ANH TECHNOLOGY INVESTMENT CORPORATION</title>
+  <title>MINH ANH AGRICULTURAL INVESTMENT JOINT STOCK COMPANY</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <meta name="description"
     content="Thế mạnh đặc biệt của chúng tôi là sự phối hợp để tạo ra các điều kiện kinh doanh dựa vào danh mục khách hàng phong phú. Qua đó, chúng tôi có cơ sở vững chắc để mang đến những giải pháp tối ưu cho từng khách hàng. Với chúng tôi, hiệu quả chính là điều kiện hàng đầu trước khi thực hiện bất kỳ dự án nào." />
