--- a/src/en/news/kiem-soat-chat-luong-thuc-an-chan-nuoi-en.ejs
+++ b/src/en/news/kiem-soat-chat-luong-thuc-an-chan-nuoi-en.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>MINH ANH TECHNOLOGY INVESTMENT CORPORATION - TO IMPROVE COMPANY PROFITABILITY, CONTROLLING THE QUALITY OF LIVESTOCK FEED IS CRUCIAL</title>
+  <title>MINH ANH AGRICULTURAL INVESTMENT JOINT STOCK COMPANY - TO IMPROVE COMPANY PROFITABILITY, CONTROLLING THE QUALITY OF LIVESTOCK FEED IS CRUCIAL</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <meta property="og:locale" content="vi_VN" />
   <meta property="og:type" content="article" />
