--- a/src/en/project.ejs
+++ b/src/en/project.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>MINH ANH TECHNOLOGY INVESTMENT CORPORATION - DỰ ÁN</title>
+  <title>MINH ANH AGRICULTURAL INVESTMENT JOINT STOCK COMPANY - DỰ ÁN</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <link rel="canonical" href="/en/project/" />
   <meta property="og:locale" content="vi_VN" />
@@ -47,7 +47,7 @@
                           <h2 class="title_header">PROJECT INFORMATION</h2>
                           <div class="br_line"><img src="/assets/img/bds/line.png" alt="icon line"></div>
                           <div class="services_text"><p style="text-align: justify;">Compilation of real estate projects, affordable apartment projects, and latest luxury projects. <span style="color:#ff0000;"><strong>
-                            MINH ANH TECHNOLOGY INVESTMENT CORPORATION</strong></span> provides comprehensive information about the project's investors, legal aspects, construction progress, and detailed price list of the residential project with the latest update.</p></div>
+                            MINH ANH AGRICULTURAL INVESTMENT JOINT STOCK COMPANY</strong></span> provides comprehensive information about the project's investors, legal aspects, construction progress, and detailed price list of the residential project with the latest update.</p></div>
                           <div class="row project-layout">
                             <div class="col-md-4 col-sm-6 col-xs-12">
                               <div class="single-property"> <span>In progress</span>
