--- a/src/gioi-thieu.ejs
+++ b/src/gioi-thieu.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH - GIỚI THIỆU</title>
+  <title>CÔNG TY CỔ PHẦN ĐẦU TƯ NÔNG NGHIỆP MINH ANH - GIỚI THIỆU</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <link rel="canonical" href="/gioi-thieu/" />
   <meta property="og:locale" content="vi_VN" />
@@ -374,7 +374,7 @@
                           <div class="wpb_wrapper">
                             <h3>Lịch sử hình thành<br />
                               &amp; phát triển</h3>
-                            <p>Công ty Cổ phần Đầu tư Công nghệ Minh Anh ( Minh Anh Group ) là doanh nghiệp hàng đầu trong lĩnh vực Thương mại hàng Nông sản, Nguyên liệu thô, Premix và Chất phụ gia sử dụng trong ngành sản xuất thức chăn nuôi tại Việt Nam.</p>
+                            <p>CÔNG TY CỔ PHẦN ĐẦU TƯ NÔNG NGHIỆP MINH ANH ( Minh Anh Group ) là doanh nghiệp hàng đầu trong lĩnh vực Thương mại hàng Nông sản, Nguyên liệu thô, Premix và Chất phụ gia sử dụng trong ngành sản xuất thức chăn nuôi tại Việt Nam.</p>
                             <p>Trong suốt chặng đường hình thành và phát triển, Minh Anh Group đã dần khẳng định vị thế của mình trên thương trường thông qua việc trở thành Nhà phân phối độc quyền của những thương hiệu lớn trên thế giới như DSM, Diamond V, Olmix, Massel …&#8230;</p>
                             <p>Với tiềm lực mạnh mẽ, đội ngũ nhân viên giàu kỹ năng, kinh nghiệm trong ngành chăn nuôi chính là cơ sở vững chắc để Minh Anh Group phát triển bền vững &amp; lâu dài.</p>
                           </div>
