--- a/src/partial/header.ejs
+++ b/src/partial/header.ejs
@@ -20,7 +20,7 @@
                   
                 </div>
                 <div class="company-text">
-                  <p class="company-name">CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH</p>
+                  <p class="company-name">CÔNG TY CỔ PHẦN ĐẦU TƯ NÔNG NGHIỆP MINH ANH</p>
                 </div>
               </div>
             </div>
@@ -145,7 +145,7 @@
                      
                 </div>
                 <div class="company-text">
-                  <p class="company-name">MINH ANH TECHNOLOGY INVESTMENT CORPORATION</p>
+                  <p class="company-name">MINH ANH AGRICULTURAL INVESTMENT JOINT STOCK COMPANY</p>
                 </div>
               </div>
             </div>
