--- a/src/thanh-toan.ejs
+++ b/src/thanh-toan.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH - THANH TOÁN</title>
+  <title>CÔNG TY CỔ PHẦN ĐẦU TƯ NÔNG NGHIỆP MINH ANH - THANH TOÁN</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <link rel="canonical" href="/thanh-toan/" />
   <meta property="og:locale" content="vi_VN" />
@@ -73,7 +73,7 @@
                                   <div style="width: 150px;"><img itemprop="image"
                                     src="assets/img/thanh-toan/hdbank.png" alt="&nbsp;" /></div>
                                   
-                                    <div><b>TÊN TÀI KHOẢN:</b> CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH</div> 
+                                    <div><b>TÊN TÀI KHOẢN:</b> CÔNG TY CỔ PHẦN ĐẦU TƯ NÔNG NGHIỆP MINH ANH</div> 
                                     <div><b>SỐ TÀI KHOẢN  :</b> 045704070024952 (VND)</div>
                                     <div>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&nbsp;&nbsp;045840070000757 (USD)</div>
                                     <div>NGÂN HÀNG TMCP PHÁT TRIỂN TP. HỒ CHÍ MINH - CHI NHÁNH SÀI GÒN</div>
