--- a/src/tin-tuc/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi.ejs
+++ b/src/tin-tuc/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH - CÓ THỂ CẮT GIẢM HOẶC THAY THẾ VITAMIN E TRONG THỨC ĂN CHĂN NUÔI ?</title>
+  <title>CÔNG TY CỔ PHẦN ĐẦU TƯ NÔNG NGHIỆP MINH ANH - CÓ THỂ CẮT GIẢM HOẶC THAY THẾ VITAMIN E TRONG THỨC ĂN CHĂN NUÔI ?</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <meta property="og:locale" content="vi_VN" />
   <meta property="og:type" content="article" />
