--- a/src/tin-tuc/dieu-chinh-che-do-dinh-duong-cho-heo-nai.ejs
+++ b/src/tin-tuc/dieu-chinh-che-do-dinh-duong-cho-heo-nai.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH - ĐIỀU CHỈNH CHẾ ĐỘ DINH DƯỠNG CHO HEO NÁI TRONG GIAI ĐOẠN CHUYỂN
+  <title>CÔNG TY CỔ PHẦN ĐẦU TƯ NÔNG NGHIỆP MINH ANH - ĐIỀU CHỈNH CHẾ ĐỘ DINH DƯỠNG CHO HEO NÁI TRONG GIAI ĐOẠN CHUYỂN
     TIẾP KHI SINH</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <meta property="og:locale" content="vi_VN" />
