--- a/src/tin-tuc/kiem-soat-chat-luong-thuc-an-chan-nuoi.ejs
+++ b/src/tin-tuc/kiem-soat-chat-luong-thuc-an-chan-nuoi.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH - KIỂM SOÁT CHẤT LƯỢNG THỨC ĂN CHĂN NUÔI ĐỂ CẢI THIỆN LỢI NHUẬN CÔNG
+  <title>CÔNG TY CỔ PHẦN ĐẦU TƯ NÔNG NGHIỆP MINH ANH - KIỂM SOÁT CHẤT LƯỢNG THỨC ĂN CHĂN NUÔI ĐỂ CẢI THIỆN LỢI NHUẬN CÔNG
     TY</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <meta property="og:locale" content="vi_VN" />
