--- a/src/tin-tuc/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con.ejs
+++ b/src/tin-tuc/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH - KIỂM SOÁT GIÁ TRỊ ĐỆM TRONG THỨC ĂN HEO CON</title>
+  <title>CÔNG TY CỔ PHẦN ĐẦU TƯ NÔNG NGHIỆP MINH ANH - KIỂM SOÁT GIÁ TRỊ ĐỆM TRONG THỨC ĂN HEO CON</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <meta property="og:locale" content="vi_VN" />
   <meta property="og:type" content="article" />
