--- a/src/en/career.ejs
+++ b/src/en/career.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH - CAREER</title>
+  <title>CÔNG TY CỔ PHẦN ĐẦU TƯ NÔNG NGHIỆP MINH ANH - CAREER</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <meta property="og:locale" content="en_US" />
   <meta property="og:locale:alternate" content="vi_VN" />
