--- a/src/en/payment.ejs
+++ b/src/en/payment.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>MINH ANH TECHNOLOGY INVESTMENT CORPORATION - PAYMENT</title>
+  <title>MINH ANH AGRICULTURAL INVESTMENT JOINT STOCK COMPANY - PAYMENT</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <link rel="canonical" href="/en/payment/" />
   <meta property="og:locale" content="en_US" />
