--- a/src/en/product/san-pham-dung-cho-trang-trai-en.ejs
+++ b/src/en/product/san-pham-dung-cho-trang-trai-en.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>MINH ANH TECHNOLOGY INVESTMENT CORPORATION - PRODUCTS USING FOR FARM SITE</title>
+  <title>MINH ANH AGRICULTURAL INVESTMENT JOINT STOCK COMPANY - PRODUCTS USING FOR FARM SITE</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <meta property="og:locale" content="en_US" />
   <meta property="og:locale:alternate" content="vi_VN" />
