--- a/src/index.ejs
+++ b/src/index.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH</title>
+  <title>CÔNG TY CỔ PHẦN ĐẦU TƯ NÔNG NGHIỆP MINH ANH</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <meta name="description"
   content="Thế mạnh đặc biệt của chúng tôi là sự phối hợp để tạo ra các điều kiện kinh doanh dựa vào danh mục khách hàng phong phú. Qua đó, chúng tôi có cơ sở vững chắc để mang đến những giải pháp tối ưu cho từng khách hàng. Với chúng tôi, hiệu quả chính là điều kiện hàng đầu trước khi thực hiện bất kỳ dự án nào." />
