--- a/src/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.ejs
+++ b/src/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH - 6 BƯỚC TRONG LẬP CÔNG THỨC THỨC ĂN CHĂN NUÔI</title>
+  <title>CÔNG TY CỔ PHẦN ĐẦU TƯ NÔNG NGHIỆP MINH ANH - 6 BƯỚC TRONG LẬP CÔNG THỨC THỨC ĂN CHĂN NUÔI</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <meta property="og:locale" content="vi_VN" />
   <meta property="og:type" content="article" />
